fixed dashboarrd